# NISE_2017

example/: CMakeLists.txt
example/dimer/: Energy.txt  inputPop  run.sh
example/trimer/: inpTra  inputPop  run.sh
example/tutorial/: CMakeLists.txt  plot_pop.py  stochastic_general
example/tutorial/src/: stochastic_general.c
src/: CMakeLists.txt  NISE.c  NISE_subs.c  NISE_subs.h  lapack.h  pop_single_t2.c  pop_single_t2.h  prop_schemes.c  prop_schemes.h  readinput.c
